# ChainData

./: .coverage  .flake8  .gitignore  LICENSE  Makefile  README.md  chain_data.py  config.json  config.py  defillama-api-spec.json  defillama.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
scripts/: pre-commit.sh
src/: __init__.py
src/api/: __init__.py  base.py  blockchain.py  chainlist.py  defillama.py  etherscan.py
src/chaindata/: __init__.py
src/chaindata/api/: chainlist.py  defillama.py
src/chaindata/cli/: __init__.py  main.py
src/chaindata/cli/commands/: chain_commands.py
src/chaindata/core/: cache.py  config.py
src/chaindata/models/: defi.py
src/chaindata/utils/: formatters.py  http.py
src/cli/: __init__.py  interactive.py  main.py
src/core/: __init__.py  cache.py  config.py  config_schema.py  logger.py
src/models/: chain.py  defi.py  etherscan.py
src/utils/: __init__.py  display.py
tests/: __init__.py
tests/api/: __init__.py  test_blockchain.py  test_chainlist.py  test_defillama.py
tests/core/: test_config.py
tests/utils/: test_display.py
